# raytraverse

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  ACKNOWLEDGEMENTS.rst  CMakeLists.txt  Dockerfile  HISTORY.rst  MANIFEST  MANIFEST.in  Makefile  README.rst  bump.sh  dist_versions.sh  flake8.sh  release.sh  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  setup_dev.py  tox.ini
build_scripts/: Dockerfile  Dockerfile310  Dockerfile37  Dockerfile38  Dockerfile39  DockerfileDev  build_images.sh  dist_check.sh  dist_versions.sh  docker_dev_build.sh  docker_run.sh  docker_test.sh  linux_test.sh  release.sh  requirements.txt
docker/: Dockerfile  Dockerfile_first  docker_run.sh  raytraverse-1.3.0-py3-none-any.whl
docs/: Makefile  api.rst  cli.rst  conf.py  craytraverse.rst  draw.rst  evaluate.rst  field.rst  formatter.rst  git.rst  helpers.rst  history.rst  index.rst  integrator.rst  io.rst  lightfield.rst  lightplane.rst  lightpoint.rst  make.bat  mapper.rst  metric.rst  metricfuncs.rst  optic.rst  plot.rst  raytraverse.raytraverse.rst  raytraverse.rst  renderer.rst  requirements.txt  sampler.rst  scbinsampler.rst  scene.rst  simaud2021.rst  sky.rst  skycalc.rst  spacemapper.rst  sunmapper.rst  sunpos.rst  sunsampler.rst  sunviewsampler.rst  translate.rst  (+3 more)
docs/_static/: Dockerfile_first  Dockerfile_update  cli.html  craytraverse.html  custom.css  renderer2.html
docs/cdocs/: cli.rst  conf.py  craytraverse.rst  index.rst  renderer2.rst  static_html.py
raytraverse/: __init__.py  api.py  cli.py  cli_funcs.py  de432_2020s.bsp  draw.py  example.py  genskyvec.pl  gsv.py  helpers.py  integrator.py  io.py  metric.py  metricfuncs.py  optic.py  plot.py  quickplot.py  raytraverse.py  raytu.py  sampler.py  scbinsampler.py  scene.py  singlesunsampler.py  skycalc.py  skyintegrator.py  spacemapper.py  sunintegrator.py  sunmapper.py  sunpos.py  sunrunner.py  sunsampler.py  sunsetter.py  sunviewintegrator.py  sunviewsampler.py  translate.py  viewmapper.py  wavelet.py
raytraverse/cal/: decking.cal  dots.cal  fill.cal  holes.cal  mixtile.cal  project.cal  pucker.cal  rollershade.cal  rucalc.cal  ruphotosphere.cal  scbins.cal  scxyz.cal  utahp.cal  uvn.cal
raytraverse/crenderer/: __init__.py  pyvirtual.py
raytraverse/evaluate/: __init__.py  basemetricset.py  fieldmetric.py  hvsgsm.py  metric.py  metricset.py  multilummetricset.py  positionindex.py  retina.py  samplingmetrics.py
raytraverse/field/: __init__.py  sunview.py
raytraverse/formatter/: __init__.py  formatter.py  imageformatter.py  radianceformatter.py
raytraverse/integrator/: __init__.py  _helpers.py  baseintegrator.py  helpers.py  integrator.py  integratords.py  integratordv.py  metric.py  metricset.py  positionindex.py  retina.py  sensorintegrator.py  skydata.py  skyintegrator.py  staticintegrator.py  sunskyintegrator.py  sunviewintegrator.py  zonalintegrator.py  zonalintegratords.py  zonalintegratordv.py
raytraverse/lightfield/: __init__.py  _helpers.py  daylightplanekd.py  integrator.py  lightfield.py  lightfieldkd.py  lightplanekd.py  lightresult.py  memarraydict.py  scbinfield.py  sensorplanekd.py  sets.py  srcbinfield.py  staticfield.py  sunfield.py  sunsensorplanekd.py  sunskyfield.py  sunskypt.py  sunsplanekd.py  sunviewfield.py  zonallightresult.py
raytraverse/lightplane/: __init__.py  lightplanekd.py
raytraverse/lightpoint/: __init__.py  compressedpointkd.py  lightpointkd.py  lpconstruct.py  skypointkd.py  srcviewpoint.py  sunpointkd.py  sunviewpoint.py
raytraverse/mapper/: __init__.py  angularmixin.py  imagetools.py  mapper.py  maskedplanmapper.py  planmapper.py  pointset.py  skymapper.py  spacemapper.py  spacemapperpt.py  sunmapper.py  viewmapper.py
raytraverse/renderer/: __init__.py  imagerenderer.py  radiancerenderer.py  rcontrib.py  renderer.py  rtrace.py  sprenderer.py
raytraverse/sampler/: __init__.py  basesampler.py  draw.py  imagesampler.py  isamplerarea.py  isamplersuns.py  sampler.py  samplerarea.py  samplerpt.py  samplersuns.py  scbinsampler.py  sensor.py  singlesunsampler.py  skysampler.py  skysamplerpt.py  srcsamplerpt.py  srcsamplerptview.py  sunambientsampler.py  sunrunner.py  sunsampler.py  sunsamplerpt.py  sunsamplerptview.py  sunviewsampler.py  sunviewsamplerpt.py
raytraverse/scene/: __init__.py  basescene.py  imagescene.py  scene.py  skyinfo.py  sunsetter.py  sunsetterbase.py  sunsetterloc.py  sunsetterpositions.py
raytraverse/sky/: __init__.py  skycalc.py  skydata.py  skydatamask.py  solarboundary.py  suns.py  sunsloc.py  sunspos.py
raytraverse/utility/: __init__.py  cli.py  imagetools.py  (+2 more)
src/: CMakeLists.txt  StaticVersion.c  Version.c  craytraverse.cpp  create_version.cmake  func.c  main.cpp  mainrc.cpp  mainrt.cpp  pybind11_add_module_libs.cmake  pyhelpers.cpp  radiance.cpp  radiance_cvs.sh  radiancegitsetup.sh  rc2.c  rc3.c  rcinit.c  rcinit.h  rcontrib.cpp  rcontrib.hh  rcontribparts.c  rcraycalls.c  render.cpp  render.h  render.hh  rtinit.c  rtinit.h  rtrace.cpp  rtrace.h  rtrace.hh  rtraceparts.c  sparse-checkout
src/csrc/: calcompcal.c  calcompcal.h  caldefncal.c  caldefncal.h  error.c  evalglare.c  func_mod.c  funccal.c  gendaylit.c  raytrace_lr0.c  rc2_mod.c  rc3_mod.c  rcinit.c  rcinit.h  rcontribparts.c  rcraycalls.c  readobj_mod.c  rtinit.c  rtinit.h  rtraceparts.c  source.c
src/ray/CVS/: Entries
src/ray/src/common/CVS/: Entries  Repository
src/ray/src/common/pyradlib/CVS/: Entries  Repository  Root
src/ray/src/rt/: rc2.c
src/ray/src/rt/CVS/: Entries  Repository
tests/: conftest.py  test_cli.py  test_craytraverse.py  test_crcontrib.py  test_crtrace.py  test_draw.py  test_example.py  test_hvsgsm.py  test_imagesampler.py  test_integrator.py  test_io.py  test_lightpoint.py  test_metric.py  test_new.py  test_planmapper.py  test_raytraverse.py  test_retina.py  test_sampler.py  test_samplers.py  test_scene.py  test_sensor.py  test_sky.py  test_skycalc.py  test_skysampler.py  test_spacemapper.py  test_sprenderer.py  test_sunpos.py  test_translate.py  test_viewmapper.py
validations/: README.txt  essentials.cfg
(+894 files in other folders)
